# taihang

./: CMakeLists.txt  README.md  design_lessons.md
benchmarks/: bench_bsgs_dlog.cpp
deprecated/: batched_bsgs_dlog.cpp  batched_bsgs_dlog.hpp  bench_batched_bsgs_dlog.cpp  bsgs_dlog_unordered_map.hpp  bsgs_dlog_with_unordered_map.cpp
include/taihang/algorithm/: bsgs_dlog.hpp
include/taihang/common/: bench_setting.hpp  check.hpp  config.hpp  logger.hpp
include/taihang/crypto/: aes.hpp  bigint.hpp  block.hpp  bn_ctx.hpp  crypto_hash.hpp  ec25519_point.hpp  ec_group.hpp  prg.hpp  prp.hpp  stream_cipher.hpp  zn.hpp
include/taihang/net/: net_io.hpp
include/taihang/structure/: bloom_filter.hpp  plain_hash.hpp
include/taihang/system/: cpu.hpp
include/taihang/utility/: arithmetic.hpp  file_system.hpp  inspect.hpp  io.hpp  poly.hpp  transcode.hpp  vector_tool.hpp
source/algorithm/: bsgs_dlog.cpp
source/common/: bench_setting.cpp  check.cpp  config.cpp  logger.cpp
source/crypto/: aes.cpp  bigint.cpp  block.cpp  bn_ctx.cpp  crypto_hash.cpp  ec25519_point.cpp  ec_group.cpp  prg.cpp  prp.cpp  stream_cipher.cpp  zn.cpp
source/net/: net_io.cpp
source/structure/: bloom_filter.cpp  plain_hash.cpp
source/system/: cpu.cpp
tests/: test_aes.cpp  test_bigint.cpp  test_block.cpp  test_bloom_filter.cpp  test_bsgs_dlog.cpp  test_ec_group.cpp  test_net_io.cpp  test_prg.cpp  test_zn.cpp
